--- a/static/css/reset_pw.css
+++ b/static/css/reset_pw.css
@@ -135,3 +135,33 @@ main {
   color: #fff;
   font-weight: 900;
 }
+
+@media screen and (max-width:1023px) {
+  /* 타블렛 가로 */
+}
+
+@media screen and (max-width: 767px) {
+  /* 타블렛 세로, 모바일 가로 */
+}
+
+@media screen and (max-width: 479px) {
+  /* 모바일 세로 */
+  #reset-pw__title img {
+    width: 15rem;
+  }
+
+  #reset-pw__desc {
+    width: 20rem;
+    text-align: center;
+    font-size: .85rem;
+    color: #000;
+    font-weight: 100;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+    line-height: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+}
