--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -1,5 +1,5 @@
 /*login*/
-main {
+/* main {
   width: 100%;
   height: auto;
   display: flex;
@@ -8,11 +8,19 @@ main {
   flex-wrap: wrap;
   font-family: "Noto Sans", "Noto Sans KR";
   margin-top: 5rem;
-}
+} */
 
 #signup {
   display: flex;
   flex-direction: column-reverse;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  font-family: "Noto Sans", "Noto Sans KR";
+  margin-top: 5rem;
 }
 
 #signup #signup-top {
@@ -185,7 +193,7 @@ input#input__reg__cb:checked + label:before {
 #signup__modal-1.modal-overlay {
   display: none;
   width: 100%;
-  height: 130%;
+  height: 150%;
   position: absolute;
   left: 0;
   top: 0;
@@ -243,7 +251,7 @@ input#input__reg__cb:checked + label:before {
 #signup__modal-2.modal-overlay {
   display: none;
   width: 100%;
-  height: 130%;
+  height: 150%;
   position: absolute;
   left: 0;
   top: 0;
@@ -624,4 +632,222 @@ main .input {
   background-color: rgb(47, 82, 245);
   color: #fff;
   font-weight: 900;
+}
+
+@media screen and (max-width:1023px) {
+  /* 타블렛 가로 */
+}
+  
+
+
+@media screen and (max-width: 767px) {
+  /* 타블렛 세로, 모바일 가로 */
+  /*login*/
+  /* main {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-family: "Noto Sans", "Noto Sans KR";
+    margin-top: 5rem;
+  } */
+
+  #signup {
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-family: "Noto Sans", "Noto Sans KR";
+    margin-top: 5rem;
+  }/*change*/
+
+  #signup #signup-top {
+    width: 100%;
+    margin: 0 auto;
+  }/*change*/
+
+  /*모달*/
+  #signup__modal-1.modal-overlay {
+    display: none;
+    width: 100%;
+    height: 150%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    background: rgba(103, 99, 99, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(1.5px);
+    -webkit-backdrop-filter: blur(1.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+  }
+
+  #signup__modal-1 .modal__window {
+    background: #fff;
+    box-shadow: 0 8px 32px 0 rgba(16, 18, 42, 0.37);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    width: 80%;
+    max-height: 60%;
+    overflow-y: auto;
+    position: relative;
+    padding: 20px 10px 10px 10px;
+    margin-top: 10rem;
+  }/*change*/
+  
+  #signup__modal-2 .modal__window {
+    background: #fff;
+    box-shadow: 0 8px 32px 0 rgba(16, 18, 42, 0.37);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    width: 80%;
+    max-height: 60%;
+    overflow-y: auto;
+    position: relative;
+    padding: 20px 10px 10px 10px;
+    margin-top: 10rem;
+  }/*change*/
+
+  /*간편 로그인*/
+  .signup__sim {
+    width: 100%;
+    height: 2rem;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    color: #8c8c8c;
+    font-weight: 100;
+  }/*change*/
+
+  #signup__2nd__btn {
+    cursor: pointer;
+    margin-top: 1rem;
+    margin-bottom: 7rem;
+    width: 22rem;
+    height: 4rem;
+    outline: 0;
+    border: 0;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+    background-color: rgb(47, 82, 245);
+    color: #fff;
+    font-weight: 900;
+  }/*change*/
+}
+
+@media screen and (max-width:480px) {
+  /* 모바일 세로 */
+  #signup {
+    display: flex;
+    flex-direction: column-reverse;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-family: "Noto Sans", "Noto Sans KR";
+    margin-top: 5rem;
+  }/*change*/
+
+  #signup #signup-top {
+    width: 100%;
+    margin: 0 auto;
+  }/*change*/
+
+  /*모달*/
+  #signup__modal-1.modal-overlay {
+    display: none;
+    width: 100%;
+    height: 150%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    background: rgba(103, 99, 99, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(1.5px);
+    -webkit-backdrop-filter: blur(1.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+  }
+
+  #signup__modal-1 .modal__window {
+    background: #fff;
+    box-shadow: 0 8px 32px 0 rgba(16, 18, 42, 0.37);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    width: 80%;
+    max-height: 60%;
+    overflow-y: auto;
+    position: relative;
+    padding: 20px 10px 10px 10px;
+    margin-top: 10rem;
+  }/*change*/
+  
+  #signup__modal-2 .modal__window {
+    background: #fff;
+    box-shadow: 0 8px 32px 0 rgba(16, 18, 42, 0.37);
+    backdrop-filter: blur(13.5px);
+    -webkit-backdrop-filter: blur(13.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    width: 80%;
+    max-height: 60%;
+    overflow-y: auto;
+    position: relative;
+    padding: 20px 10px 10px 10px;
+    margin-top: 10rem;
+  }/*change*/
+
+  /*간편 로그인*/
+  .signup__sim {
+    width: 100%;
+    height: 2rem;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    color: #8c8c8c;
+    font-weight: 100;
+  }/*change*/
+
+  #signup__2nd__btn {
+    cursor: pointer;
+    margin-top: 1rem;
+    margin-bottom: 7rem;
+    width: 22rem;
+    height: 4rem;
+    outline: 0;
+    border: 0;
+    font-size: 1rem;
+    border-radius: 0.5rem;
+    background-color: rgb(47, 82, 245);
+    color: #fff;
+    font-weight: 900;
+  }/*change*/
 }
