--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,130 +1,133 @@
 {% extends 'users/base.html' %}
 {% block content %}
-  {% load static %}
-  {% static 'img/naver_login.png' as naver_button %}
-  {% static 'img/google_login.png' as google_button %}
-  {% static 'img/kakao_login.png' as kakao_button %}
-  {% static 'img/github_login.png' as github_button %}
-  <main id="login">
-    <div class="login__container">
-      <div class="login__nor">
-        <span>MOCO</span>
-        <form action="{% url 'users:login' %}" method="post" enctype="multipart/form-data">
-          {% csrf_token %}
-          <div class="input">
-            <div class="input__id">
-              {{ form.username.errors }}
-              <lable for="{{ form.username.id_for_label }}"></lable>
-              <input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username" maxlength="150" required="" id="id_username" placeholder="아이디"/>
-            </div>
-            <div class="input__pw">
-              {{ form.password.errors }}
-              <lable for="{{ form.password.id_for_label }}"></lable>
-              <input type="password" name="password" autocomplete="current-password" required="" id="id_password" placeholder="비밀번호"/>
-            </div>
-            <div class="align__cb">
-              <input type="checkbox" id="input__cb" name="input__cb"/>
-              <label for="input__cb"></label>
-              <span>아이디 저장</span>
-            </div>
-            <input type="hidden" name="next" value="{{ next }}"/>
-            <button id="login__btn">로그인</button>
+{% load static %}
+{% static 'img/naver_login.png' as naver_button %}
+{% static 'img/google_login.png' as google_button %}
+{% static 'img/kakao_login.png' as kakao_button %}
+{% static 'img/github_login.png' as github_button %}
+<main id="login">
+  <div class="login__container">
+    <div class="login__nor">
+      <span>MOCO</span>
+      <form action="{% url 'users:login' %}" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="input">
+          <div class="input__id">
+            {{ form.username.errors }}
+            <lable for="{{ form.username.id_for_label }}"></lable>
+            <input type="text" name="username" autofocus="" autocapitalize="none" autocomplete="username"
+              maxlength="150" required="" id="id_username" placeholder="아이디" />
           </div>
-        </form>
-        <div id="sub__menu">
-          <a href="{% url 'users:find_id' %}">아이디 찾기&nbsp;&nbsp;</a>
-          |
-          <a href="{% url 'users:reset_pw' %}">&nbsp;비밀번호 재설정&nbsp;&nbsp;</a>
-          |
-          <a href="{% url 'users:signup' %}">&nbsp;&nbsp;회원가입</a>
+          <div class="input__pw">
+            {{ form.password.errors }}
+            <lable for="{{ form.password.id_for_label }}"></lable>
+            <input type="password" name="password" autocomplete="current-password" required="" id="id_password"
+              placeholder="비밀번호" />
+          </div>
+          <div class="align__cb">
+            <input type="checkbox" id="input__cb" name="input__cb" />
+            <label for="input__cb"></label>
+            <span>아이디 저장</span>
+          </div>
+          <input type="hidden" name="next" value="{{ next }}" />
+          <button id="login__btn">로그인</button>
         </div>
+      </form>
+      <div id="sub__menu">
+        <a href="{% url 'users:find_id' %}">아이디 찾기&nbsp;&nbsp;</a>
+        |
+        <a href="{% url 'users:reset_pw' %}">&nbsp;비밀번호 재설정&nbsp;&nbsp;</a>
+        |
+        <a href="{% url 'users:signup' %}">&nbsp;&nbsp;회원가입</a>
+      </div>
 
-        <div class="login__sim">
-          <hr noshade="noshade"/>
-          <span>간편 로그인</span>
-          <hr noshade="noshade"/>
+      <div class="login__sim">
+        <hr noshade="noshade" />
+        <span>간편 로그인</span>
+        <hr noshade="noshade" />
+      </div>
+      {% load socialaccount %}
+      {% providers_media_js %}
+      <div class="login__sim__soc">
+        <div>
+          <form method="post" action="{% provider_login_url 'google' %}">
+            {% csrf_token %}
+            <button type="submit"><img src="{{ google_button }}" height="42" width="152" /></button>
+          </form>
+          <form method="post" action="{% provider_login_url 'kakao' %}">
+            {% csrf_token %}
+            <button type="submit"><img src="{{ kakao_button }}" height="40" width="150" /></button>
+          </form>
         </div>
-        {% load socialaccount %}
-        {% providers_media_js %}
-        <div class="login__sim__soc">
-          <div>
-            <form method="post" action="{% provider_login_url 'google' %}">
-              {% csrf_token %}
-              <button type="submit"><img src="{{ google_button }}" height="42" width="152"/></button>
-            </form>
-            <form method="post" action="{% provider_login_url 'kakao' %}">
-              {% csrf_token %}
-              <button type="submit"><img src="{{ kakao_button }}" height="40" width="150"/></button>
-            </form>
-          </div>
-          <div>
-            <form method="post" action="{% provider_login_url 'naver' %}">
-              {% csrf_token %}
-              <button type="submit"><img src="{{ naver_button }}" height="40" width="152" style="padding-bottom: 0.1rem"/></button>
-            </form>
-            <form method="post" action="{% provider_login_url 'github' %}">
-              {% csrf_token %}
-              <button type="submit"><img src="{{ github_button }}" height="40" width="152"/></button>
-            </form>
-          </div>
+        <div>
+          <form method="post" action="{% provider_login_url 'naver' %}">
+            {% csrf_token %}
+            <button type="submit"><img src="{{ naver_button }}" height="40" width="152"
+                style="padding-bottom: 0.1rem" /></button>
+          </form>
+          <form method="post" action="{% provider_login_url 'github' %}">
+            {% csrf_token %}
+            <button type="submit"><img src="{{ github_button }}" height="40" width="152" /></button>
+          </form>
         </div>
       </div>
     </div>
-  </main>
-  <script>
-    // 아이디 저장
-    $(document).ready(function () {
-      var key = getCookie('key');
-      $('#id_username').val(key);
+  </div>
+</main>
+<script>
+  // 아이디 저장
+  $(document).ready(function () {
+    var key = getCookie('key');
+    $('#id_username').val(key);
 
-      if ($('#id_username').val() != '') {
-        $('#input__cb').attr('checked', true);
+    if ($('#id_username').val() != '') {
+      $('#input__cb').attr('checked', true);
+    }
+
+    $('#input__cb').change(function () {
+      if ($('#input__cb').is(':checked')) {
+        setCookie('key', $('#id_username').val(), 7);
+      } else {
+        deleteCookie('key');
       }
-
-      $('#input__cb').change(function () {
-        if ($('#input__cb').is(':checked')) {
-          setCookie('key', $('#id_username').val(), 7);
-        } else {
-          deleteCookie('key');
-        }
-      });
-
-      $('#id_username').keyup(function () {
-        if ($('#input__cb').is(':checked')) {
-          setCookie('key', $('#id_username').val(), 7);
-        }
-      });
     });
 
-    function setCookie(cookieName, value, exdays) {
-      var exdate = new Date();
-      exdate.setDate(exdate.getDate() + exdays);
-      var cookieValue = escape(value) + (
-        exdays == null
+    $('#id_username').keyup(function () {
+      if ($('#input__cb').is(':checked')) {
+        setCookie('key', $('#id_username').val(), 7);
+      }
+    });
+  });
+
+  function setCookie(cookieName, value, exdays) {
+    var exdate = new Date();
+    exdate.setDate(exdate.getDate() + exdays);
+    var cookieValue = escape(value) + (
+      exdays == null
         ? ''
         : '; expires=' + exdate.toGMTString());
-      document.cookie = cookieName + '=' + cookieValue;
-    }
+    document.cookie = cookieName + '=' + cookieValue;
+  }
 
-    function deleteCookie(cookieName) {
-      var expireDate = new Date();
-      expireDate.setDate(expireDate.getDate() - 1);
-      document.cookie = cookieName + '= ' + '; expires=' + expireDate.toGMTString();
-    }
+  function deleteCookie(cookieName) {
+    var expireDate = new Date();
+    expireDate.setDate(expireDate.getDate() - 1);
+    document.cookie = cookieName + '= ' + '; expires=' + expireDate.toGMTString();
+  }
 
-    function getCookie(cookieName) {
-      cookieName = cookieName + '=';
-      var cookieData = document.cookie;
-      var start = cookieData.indexOf(cookieName);
-      var cookieValue = '';
-      if (start != -1) {
-        start += cookieName.length;
-        var end = cookieData.indexOf(';', start);
-        if (end == -1) 
-          end = cookieData.length;
-        cookieValue = cookieData.substring(start, end);
-      }
-      return unescape(cookieValue);
+  function getCookie(cookieName) {
+    cookieName = cookieName + '=';
+    var cookieData = document.cookie;
+    var start = cookieData.indexOf(cookieName);
+    var cookieValue = '';
+    if (start != -1) {
+      start += cookieName.length;
+      var end = cookieData.indexOf(';', start);
+      if (end == -1)
+        end = cookieData.length;
+      cookieValue = cookieData.substring(start, end);
     }
-  </script>
+    return unescape(cookieValue);
+  }
+</script>
 {% endblock %}
