--- a/users/templates/users/reset_pw_confirm.html
+++ b/users/templates/users/reset_pw_confirm.html
@@ -11,13 +11,19 @@
 			{% csrf_token %}
 			<div class="input__reset__pw">
 				{{ form.new_password1.errors }}
-				<lable for="{{ form.new_password1.id_for_label }}"><p>새 비밀번호</p></lable>
-				<input type="password" name="new_password1" autocomplete="new-password" required="" id="id_new_password1" placeholder="새 비밀번호" />
+				<lable for="{{ form.new_password1.id_for_label }}">
+					<p>새 비밀번호</p>
+				</lable>
+				<input type="password" name="new_password1" autocomplete="new-password" required=""
+					id="id_new_password1" placeholder="새 비밀번호" />
 			</div>
 			<div class="input__reset__pw">
 				{{ form.new_password2.errors }}
-				<lable for="{{ form.new_password2.id_for_label }}"><p>새 비밀번호 (확인)</p></lable>
-				<input type="password" name="new_password2" autocomplete="new-password" required="" id="id_new_password2" placeholder="새 비밀번호 (확인)" />
+				<lable for="{{ form.new_password2.id_for_label }}">
+					<p>새 비밀번호 (확인)</p>
+				</lable>
+				<input type="password" name="new_password2" autocomplete="new-password" required=""
+					id="id_new_password2" placeholder="새 비밀번호 (확인)" />
 			</div>
 			<!--{{ form }}-->
 			<div id="reset-pw-cf__btn__container">
