--- a/static/css/base.css
+++ b/static/css/base.css
@@ -38,7 +38,7 @@ body {
   align-items: center;
   z-index: 1;
   max-width: 1200px;
-  min-width: 1200px;
+  /* min-width: 1200px; */
   width: 100%;
   padding: 0.8rem 0;
   margin: 0 auto;
@@ -192,10 +192,22 @@ body {
 
 /* 반응형 */
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width:1023px) {
+  .content{
+    max-width: 1023px;
+    min-width: 768px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .content{
+    max-width: 767px;
+    min-width: 481px;
+  }
+
   .navbar {
     display: flex;
-    max-width: 1180px;
+    max-width: 767px;
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
@@ -234,7 +246,11 @@ body {
   }
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 480px) {
+  .content{
+    min-width: 480px;
+  }
+
   .navbar__shortcut {
     position: absolute;
     top: -20px;
