--- a/users/templates/users/reset_pw_complete.html
+++ b/users/templates/users/reset_pw_complete.html
@@ -8,11 +8,9 @@
       <hr />
     </div>
     <div id="reset-pw-com__desc">
-      패스워드 변경이 완료되었습니다. MOCO에서 다시 로그인 해주세요.
+      <p>패스워드 변경이 완료되었습니다. MOCO에서 다시 로그인 해주세요.</p>
     </div>
-    <a href="{% url 'users:login' %}"
-      ><button id="backtologin__btn">로그인 페이지로 돌아가기</button></a
-    >
+    <a href="{% url 'users:login' %}"><button id="backtologin__btn">로그인 페이지로 돌아가기</button></a>
   </div>
 </main>
 {% endblock %}
