--- a/static/css/base.css
+++ b/static/css/base.css
@@ -28,19 +28,19 @@ body {
   right: 0;
   display: flex;
   z-index: 1;
-}
-
-.navbar-desktop {
   font-family: "Noto Sans", sans-serif;
   font-family: "Noto Sans KR", sans-serif;
   font-weight: 600;
   font-size: 1.1rem;
+}
+
+.navbar-desktop {
   align-items: center;
   z-index: 1;
   max-width: 1200px;
   /* min-width: 1200px; */
   width: 100%;
-  padding: 0.8rem 0;
+  padding: 1rem;
   margin: 0 auto;
   display: flex;
   justify-content: flex-start;
@@ -49,6 +49,25 @@ body {
 
 .navbar-mobile {
   display: none;
+  width: 100%;
+  padding: 1rem 1.5rem;
+}
+
+.navbar-top {
+  display: none;
+  align-items: center;
+  z-index: 1;
+  /* width: 100%; */
+  margin: 0 auto;
+  position: relative;
+  width: 100%;
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
+
+.navbar-top i {
+  font-size: 1.25rem;
 }
 
 .navbar__logo {
@@ -60,7 +79,7 @@ body {
   width: 100%;
 }
 
-.navbar__list {
+.navbar__menu {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -93,7 +112,7 @@ body {
   max-width: 1200px;
   min-width: 1200px;
   width: 100%;
-  padding: 0 10px 0 10px;
+  padding: 0 1.5rem;
   margin: 3rem auto;
   z-index: 0;
 }
@@ -196,24 +215,12 @@ body {
 
 /* 햄버거 메뉴바*/
 .fa-bars {
-  display: none !important; 
+  display: none; 
 }
 
 /* 반응형 */
 
 @media screen and (max-width:1023px) {
-
-}
-
-@media screen and (max-width: 767px) {
-
-}
-
-@media screen and (max-width: 480px) {
-  
-}
-
-/* @media screen and (max-width:1023px) {
   .content{
     max-width: 1023px;
     min-width: 768px;
@@ -225,60 +232,92 @@ body {
     max-width: 767px;
     min-width: 481px;
   }
-
-  .navbar {
-    display: flex;
-    max-width: 767px;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 100%;
-    margin: 0 auto;
-    padding: 0 10px;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    z-index: 2;
-  }
-
-  .navbar__logo {
-    margin-right: auto;
-    padding: 12px 0;
-  }
-
-  .navbar__list {
-    margin: 1.25rem auto;
-    width: 100%;
-    max-width: 100%;
-    height: 0;
-  }
-
-  .navbar__shortcut {
-    position: absolute;
-    top: -20px;
-    right: 550px;
-  }
-
-  .base__dropdown {
-    height: 0;
-  }
-
-  .base__dropmenu {
-    transform: translateY(15%);
-  }
 }
 
 @media screen and (max-width: 480px) {
   .content{
     min-width: 480px;
   }
+}
 
-  .navbar__shortcut {
-    position: absolute;
-    top: -20px;
-    right: 750px;
+@media screen and (max-width:1023px) {
+  .navbar-desktop {
+    display: none;
   }
 
-  .base__dropdown {
-    height: 0;
+  .navbar-mobile {
+    display: flex;
+    flex-direction: column;
   }
-} */
+
+  .navbar__shortcut{
+    margin-left: 0;
+  }
+
+  .fa-bars {
+    display: flex;
+  }
+
+  .navbar__menu {
+    display: none;
+    gap: 0;
+  }
+
+  .navbar__menu.active {
+    display: flex;
+    flex-direction: column;
+    padding: 0.8rem 0;
+    margin-left: 0;
+  }
+
+  .navbar__menu > .base__dropdown{
+    display: block;
+    width: 100%;
+    /* text-align: center; */
+  }
+
+  .navbar__menu > .base__dropdown > a{
+    display: block;
+    padding: 1rem 0;
+    margin: 0.5rem 0;
+  }
+
+  .navbar__menu > .base__dropdown > a > i{
+    margin-left: 0.2rem;
+  }
+
+  .navbar__menu ul li {
+    display: none;
+    width: 100%;
+  }
+  
+  .navbar__menu ul li > a{
+    display: none;
+    width: 100%;
+  }
+
+  .navbar__menu.active .base__dropmenu {
+    display: none;
+    opacity: 100;
+    position: static;
+    padding: 0.5rem 0;
+    box-shadow: none;
+    margin: 0rem;
+    width: 100%;
+    height: 0;   
+  }
+
+  .navbar__menu.active .base__dropmenu.active {
+    display: block;
+    width: 100%;
+    height: 5rem; 
+    margin: 0;
+    padding: 0;
+  }
+
+  .navbar__menu.active .base__dropmenu.active li,
+  .navbar__menu.active .base__dropmenu.active li > a {
+    display: block;
+  }
+
+}
