--- a/static/css/place_home.css
+++ b/static/css/place_home.css
@@ -1,5 +1,3 @@
-@import url(base.css);
-
 .content-category {
 	font-family: 'Noto Sans', sans-serif;
 	font-family: 'Noto Sans KR', sans-serif;
@@ -123,8 +121,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	grid-gap: 35px;
-	gap: 59px;
+	grid-gap: 2.8rem;
 	flex-wrap: wrap;
 }
 
