--- a/static/css/place_detail.css
+++ b/static/css/place_detail.css
@@ -40,6 +40,7 @@
 
 #drop-content {
 	position: absolute;
+	top: 1.5rem;
 	background-color: white;
 	box-shadow: 0px 3px 6px -4px rgba(0, 0, 0, 0.12), 0px 6px 16px rgba(0, 0, 0, 0.08), 0px 9px 28px 8px rgba(0, 0, 0, 0.05);
 	border-radius: 2px;
@@ -385,7 +386,7 @@
 
 @media screen and (max-width:1023px) {
   #drop-content {
-		right: 0.5rem;
+		right: 0rem;
 	}
 	.place_detail__comments_dropdown_menu{
 		right: 0.75rem;
