signup semicolon revise

--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -407,7 +407,7 @@
               placeholder="100자 이내로 입력해주세요."></textarea>
           </div>
         </div>
-        <button id="signup__2nd__btn" type="submit" onclick="signup2Function();">가입 완료</button>
+        <button id="signup__2nd__btn" type="submit" onclick="signup2Function()">가입 완료</button>
       </div>
     </div>
   </form>
