--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -24,7 +24,16 @@
 }
 
 #signup #signup-top {
+  width: 100%;
   margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+#signup-top .signup__sim {
+  width: 100%;
 }
 
 #signup .login__sim__soc {
