--- a/static/css/place_home.css
+++ b/static/css/place_home.css
@@ -121,7 +121,7 @@
 .content-box__list {
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	justify-content: start;
 	grid-gap: 2.8rem;
 	flex-wrap: wrap;
 }
